--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@ li, a, button {
   font-weight: 400;
   font-size: 1.25vw;
   color: #0B3B3C;
+  transition: all 0.5s;
 }
 .header .menu {
   display: flex;
@@ -61,12 +62,16 @@ li, a, button {
   display: inline-block;
 }
 .header .menu .manual {
-  margin: 0 auto;
+  margin: 0px 4.5em 0px 0px;
+}
+.header .menu .manual img {
+  width: 16vw;
+  height: 4.4vh;
 }
 
 /*Intro*\ */
 .intro {
-  background: url("/img/intro.svg") fixed;
+  background: url("/src/img/intro.svg") fixed;
   background-size: cover;
   min-height: 95vh;
   min-width: 100%;
@@ -89,7 +94,7 @@ li, a, button {
   text-align: center;
 }
 .intro__main {
-  max-width: 500px;
+  max-width: 45%;
   margin: 0 auto;
   padding-top: 18vh;
 }
@@ -116,11 +121,103 @@ li, a, button {
 .main__btn .btn1 {
   color: #fff;
   background-color: #7E0707;
-  border: solid 3px #7E0707;
+  border: solid 0.15em #7E0707;
+  border-radius: 0.12em;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.main__btn a.btn1:hover {
+  color: #7E0707;
+  background: none;
 }
 .main__btn .btn2 {
   color: #7E0707;
-  border: solid 3px #7E0707;
+  border: solid 0.15em #7E0707;
+  border-radius: 0.12em;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.main__btn a.btn2:hover {
+  color: #fff;
+  background: #7E0707;
 }
 
 /*Main*\ */
+.main__info {
+  margin: 0 auto;
+  max-width: 95%;
+  font-size: 1.25vw;
+  font-family: "Roboto", sans-serif;
+  color: #0B3B3C;
+  display: grid;
+}
+.main__info ul {
+  display: flex;
+  justify-content: space-between;
+  height: 6em;
+  align-items: center;
+}
+.main__info ul li {
+  display: flex;
+  align-items: center;
+}
+.main__info ul li img {
+  padding-right: 0.7em;
+  height: 5vh;
+  width: 5vw;
+}
+
+.main__support {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  color: #0B3B3C;
+  font-family: "Roboto", sans-serif;
+}
+.main__support .arrow {
+  width: 10%;
+  margin: 0 auto;
+}
+.main__support .main__title {
+  max-width: 85%;
+  margin: 0 auto;
+  text-align: center;
+}
+.main__support .main__title h3 {
+  font-weight: 700;
+  font-size: 2.5em;
+  line-height: 2em;
+}
+.main__support .main__title p {
+  font-size: 1.2em;
+  line-height: 2.5em;
+}
+.main__support .main__title p span {
+  color: #00B67A;
+  font-weight: 700;
+}
+.main__support ul {
+  max-width: 85%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  color: #0B3B3C;
+}
+.main__support ul li {
+  max-width: 24vw;
+}
+.main__support ul li p {
+  font-weight: 400;
+  font-size: 1.2em;
+  line-height: 2em;
+}
+.main__support ul li:nth-child(2) {
+  margin: 1.5vh 0px 0px 0px;
+}
+.main__support ul li:last-child {
+  margin: 5.5vh 0px 0px 0px;
+}
+.main__support ul h3 {
+  font-weight: 700;
+  line-height: 3em;
+  font-size: 1.5em;
+}
