--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -13,6 +13,7 @@ li, a, button
 	font-weight: 400
 	font-size: 1.25vw
 	color: #0B3B3C
+	transition: all 0.5s
 	.menu
 		display: flex
 		align-items: center
@@ -46,11 +47,14 @@ li, a, button
 				li
 					display: inline-block
 		.manual
-			margin: 0 auto
-			margin-left: 16.5vw
+			margin: 0px 4.5em 0px 0px
+			img
+				width: 16vw
+				height: 4.4vh
+
 /*Intro*\
 .intro
-	background: url("/public/src/img/intro.svg") fixed
+	background: url("/src/img/intro.svg") fixed
 	background-size: cover
 	min-height: 95vh
 	min-width: 100%
@@ -62,9 +66,8 @@ li, a, button
 		font-size: 3.375vw
 		letter-spacing: 0.05vw
 		line-height: 5vw
-		margin: 0 5px
+		margin: 0 5px 3vh 0
 		text-align: center
-		margin-bottom: 3vh
 	p
 		font-weight: 400
 		font-size: 1.3vw
@@ -72,7 +75,7 @@ li, a, button
 		margin: 0 5px
 		text-align: center
 	&__main
-		max-width: 500px
+		max-width: 45%
 		margin: 0 auto
 		padding-top: 18vh
 /*Button*\
@@ -96,8 +99,81 @@ li, a, button
 	.btn1
 		color: #fff
 		background-color: #7E0707
-		border: solid 3px #7E0707
+		border: solid 0.15em #7E0707
+		border-radius: 0.12em
+		text-decoration: none
+		transition: all 0.5s
+	a.btn1:hover
+		color: #7E0707
+		background: none
 	.btn2
 		color: #7E0707
-		border: solid 3px #7E0707
+		border: solid 0.15em #7E0707
+		border-radius: 0.12em
+		text-decoration: none
+		transition: all 0.5s
+	a.btn2:hover
+		color: #fff
+		background: #7E0707
 /*Main*\
+.main__info
+	margin: 0 auto
+	max-width: 95%
+	font-size: 1.25vw
+	font-family: 'Roboto', sans-serif
+	color: #0B3B3C
+	display: grid
+	ul
+		display: flex
+		justify-content: space-between
+		height: 6em
+		align-items: center
+		li
+			display: flex
+			align-items: center
+			img
+				padding-right: 0.7em
+				height: 5vh
+				width: 5vw
+.main__support
+	border: 1px solid rgba(0, 0, 0, 0.3)
+	color: #0B3B3C
+	font-family: 'Roboto', sans-serif
+	.arrow
+		width: 10%
+		margin: 0 auto
+	.main__title
+		max-width: 85%
+		margin: 0 auto
+		text-align: center
+		h3
+			font-weight: 700
+			font-size: 2.5em
+			line-height: 2em
+		p
+			font-size: 1.2em
+			line-height: 2.5em
+			span
+				color: #00B67A
+				font-weight: 700
+	ul
+		max-width: 85%
+		margin: 0 auto
+		display: flex
+		justify-content: space-between
+		text-align: center
+		color: #0B3B3C
+		li
+			max-width: 24vw
+			p
+				font-weight: 400
+				font-size: 1.2em
+				line-height: 2em
+		li:nth-child(2)
+			margin: 1.5vh 0px  0px 0px
+		li:last-child
+			margin: 5.5vh 0px  0px 0px
+		h3
+			font-weight: 700
+			line-height: 3em
+			font-size: 1.5em
